--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,7 +12,7 @@
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-utilities';
 
-@import 'variables';
+@import 'variables', 'reset';
 
 // shared
 @import './shared/index';
@@ -20,4 +20,5 @@
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  color: $gray-primary;
 }
