--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,6 +17,9 @@
 // shared
 @import './shared/index';
 
+//homepage
+@import './homepage/index';
+
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
