Thread Affair - header and footer

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,7 +12,8 @@
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-utilities';
 
-@import 'variables', 'reset';
+@import 'variables';
+@import 'reset';
 
 // shared
 @import './shared/index';
