--- a/styles/shared/header/_index.scss
+++ b/styles/shared/header/_index.scss
@@ -1,6 +1,6 @@
 @import 'header-secondary';
 // granular sass
-@import 'nav-primary';
+@import 'nav-primary', 'nav-secondary';
 
 // one-off style
 
