--- a/styles/shared/footer/_footer-primary.scss
+++ b/styles/shared/footer/_footer-primary.scss
@@ -1,5 +1,6 @@
 .footer-primary {
   background-color: $brand-secondary;
+  color: $gray-tertiary;
 
   // .footer-primary-inner
   &-inner {
@@ -11,10 +12,10 @@
       'support';
 
     @include media-breakpoint-up('lg') {
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 1fr 1fr 1fr;
       grid-template-areas:
-        'nav nav'
-        'support contact';
+        'nav nav .'
+        'support contact .';
     }
   }
 
@@ -23,17 +24,29 @@
     flex-wrap: wrap;
     row-gap: 43px;
     grid-area: nav;
+    text-transform: uppercase;
+    font-size: 12px;
 
     @include media-breakpoint-up('lg') {
       flex-wrap: nowrap;
-      column-gap: 110px;
+      font-size: 14px;
     }
 
     ul {
       flex-basis: 50%;
 
       @include media-breakpoint-up('lg') {
-        flex-basis: auto;
+        flex-basis: 25%;
+        padding-right: 20px;
+      }
+    }
+
+    li {
+      line-height: 30px;
+      font-weight: 200;
+
+      @include media-breakpoint-up('lg') {
+        line-height: 20px;
       }
     }
   }
@@ -44,8 +57,31 @@
     @include media-breakpoint-up('lg') {
       align-self: end;
     }
-  }
 
+    h1 {
+      text-transform: uppercase;
+      font-weight: 200;
+      font-size: 16px;
+
+      span {
+        font-weight: 500;
+      }
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 200;
+      margin-bottom: 0;
+
+      a {
+        display: block;
+
+        &:nth-of-type(2) {
+          color: $brand-primary;
+        }
+      }
+    }
+  }
   .footer-support {
     grid-area: support;
     justify-self: center;
@@ -54,5 +90,28 @@
       justify-self: start;
       align-self: end;
     }
+
+    ul {
+      display: flex;
+
+      li:nth-child(2) {
+        margin: 0 40px;
+      }
+    }
+
+    a {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+      font-size: 14px;
+    }
+  }
+
+  i {
+    color: $brand-primary;
+    font-size: 40px;
+    margin-bottom: 10px;
   }
 }
