--- a/styles/shared/header/_header-secondary.scss
+++ b/styles/shared/header/_header-secondary.scss
@@ -31,6 +31,10 @@
       align-items: center;
       gap: 8px;
     }
+
+    li:first-of-type {
+      color: $brand-primary;
+    }
   }
 
   .header-controls {
@@ -42,6 +46,25 @@
       display: flex;
       align-items: center;
       gap: 8px;
+
+      @include media-breakpoint-up('lg') {
+        flex-direction: row-reverse;
+        gap: 30px;
+      }
+
+      li > a {
+        span {
+          position: absolute;
+          bottom: 18px;
+          left: 14px;
+        }
+
+        @include media-breakpoint-up('lg') {
+          i {
+            font-size: 24px;
+          }
+        }
+      }
 
       li:nth-child(2) {
         a {
@@ -61,7 +84,20 @@
 
     ul {
       display: flex;
+      justify-content: center;
+      align-items: center;
       gap: 4px;
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        i {
+          color: $brand-primary;
+          font-size: 24px;
+        }
+      }
     }
   }
 }
