Proiect Thread Affair Responsive

--- a/styles/catalog/_catalog-previews.scss
+++ b/styles/catalog/_catalog-previews.scss
@@ -2,6 +2,8 @@
 // .catalog-preview.grid-layout
 
 .catalog-preview {
+  margin-bottom: 10px;
+
   &.grid-layout {
     .product-tiles {
       display: grid;
