--- a/styles/homepage/_home-social.scss
+++ b/styles/homepage/_home-social.scss
@@ -1,4 +1,6 @@
 .home-social {
+  margin-bottom: 50px;
+
   ul {
     display: flex;
     justify-content: center;
@@ -12,6 +14,12 @@
       border-radius: 50%;
       justify-content: center;
       align-items: center;
+      transition: background-color 0.2s linear, color 0.2s linear;
+
+      &:hover {
+        background-color: $gray-secondary;
+        color: $white;
+      }
     }
 
     i[class*='fa-'] {
