--- a/styles/homepage/_index.scss
+++ b/styles/homepage/_index.scss
@@ -16,6 +16,7 @@
       h1 {
         text-transform: uppercase;
         color: $brand-primary;
+        margin-bottom: 30px;
 
         @include media-breakpoint-up('lg') {
           font-weight: 500;
