--- a/styles/shared/header/_nav-primary.scss
+++ b/styles/shared/header/_nav-primary.scss
@@ -7,14 +7,56 @@
     font-size: 20px;
     font-weight: 300;
 
+    li:last-of-type {
+      position: relative;
+    }
+
     a {
       padding: 8px 16px;
       border-radius: 24px;
       transition: color 0.2s linear, background-color 0.2s linear;
 
+      &.customize-button {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        position: absolute;
+        top: -9px;
+        left: 22px;
+        border: 2px solid $brand-primary;
+        color: $brand-primary;
+        border-radius: 23px;
+        padding: 6px 11px;
+        width: 46px;
+        height: 46px;
+        background-color: $white;
+        transition: width 0.2s linear, border-radius 0.2s linear;
+        overflow: hidden;
+
+        &:hover {
+          width: 280px;
+          white-space: nowrap;
+          background-color: $white;
+
+          i {
+            color: $brand-primary;
+          }
+        }
+
+        span {
+          display: none;
+          color: $gray-secondary;
+        }
+      }
+
       &:hover {
         background-color: $brand-primary;
         color: $white;
+
+        span {
+          display: block;
+          margin-left: 8px;
+        }
       }
     }
   }
